# Big-Data-Course

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  run.sh
.zed/: settings.json
big-data-problems/: problems.typ  ref.yml
dbt/: dbt_project.yml  profiles.yml
dbt/models/: sources.yml
dbt/models/marts/: gold_by_channel.sql  gold_by_mcc.sql  gold_by_type.sql  gold_channel_share.sql  gold_daily.sql  gold_top_counterparties.sql  schema.yml
docs/: report.md
docs/diagrams/: architecture.drawio  erd.drawio
pipeline/: definitions.py
pipeline/assets/: bronze.py  gold.py  silver.py
pipeline/resources/: duckdb_resource.py  postgres_resource.py
scripts/: processing_engine.py
sql/: elt_pipeline.sql  elt_queries.sql
src/: bronze.py  config.py  gold.py  job.py  main.py  silver.py  sql_queries.py
src/utils/: constants.py  dataset.py  db.py  duckdb_client.py  files.py  logger.py  spark.py
streaming/: config.py  file_watcher.py  orchestrator.py  queue_manager.py  worker.py
